# DL_stock_pred

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
archive/legacy/: FinalFinalFinalcode.py  README.md  dot_DS_Store  proposal_deeplearning.tex  ref.bib
data/raw/: dowjones_5y.csv  nasdaq100_5y.csv  sp500_5y.csv
scripts/: run_experiment.py
src/dl_stock_pred/: __init__.py  cli.py  config.py  data.py  models.py  pipeline.py  train.py
tests/: test_data_pipeline.py
