[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-stock-pred"
version = "1.0.0"
description = "Professional deep-learning stock index forecasting pipeline (RNN/LSTM/GRU)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Salman Chowdhury" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
]

[project.scripts]
dl-stock-pred = "dl_stock_pred.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
